Add Terraform resource for k3s agents

--- a/plan/terraform.tfvars.example
+++ b/plan/terraform.tfvars.example
@@ -10,3 +10,8 @@ server_names     = ["tata","titi","toto"]
 server_cores     = 2
 server_memory    = 2048
 server_disk_size = 64
+agent_count      = 2
+agent_names      = ["tete","tutu"]
+agent_cores      = 4
+agent_memory     = 4096
+agent_disk_size  = 128
