--- a/charts/metallb/values.yaml
+++ b/charts/metallb/values.yaml
@@ -1,6 +1,10 @@
 configInline:
+  peers:
+  - peer-address: 192.168.1.1
+    peer-asn: 64501
+    my-asn: 64500
   address-pools:
-    - name: default
-      protocol: layer2
-      addresses:
-      - 192.168.1.10-192.168.1.14
+  - name: default
+    protocol: bgp
+    addresses:
+    - 192.168.3.0/24
