--- a/plan/terraform.tfvars.example
+++ b/plan/terraform.tfvars.example
@@ -1,17 +1,19 @@
-pve_ip           = "192.168.1.13"
-pve_user         = "terraform-user@pve"
-pve_password     = "mysupersecurepassword"
-pve_node         = "proxmoxtargetnode"
-cpu              = "kvm64"
-k3os_iso         = "local:iso/myk3osimage.iso"
-disk_storage     = "local-lvm"
-server_count     = 3
-server_names     = ["tata","titi","toto"]
-server_cores     = 2
-server_memory    = 2048
-server_disk_size = 64
-agent_count      = 2
-agent_names      = ["tete","tutu"]
-agent_cores      = 4
-agent_memory     = 4096
-agent_disk_size  = 128
+pve_ip            = "192.168.1.13"
+pve_user          = "terraform-user@pve"
+pve_password      = "mysupersecurepassword"
+pve_node          = "proxmoxtargetnode"
+cpu               = "kvm64"
+k3os_iso          = "local:iso/myk3osimage.iso"
+disk_storage      = "local-lvm"
+server_count      = 3
+server_names      = ["tata","titi","toto"]
+server_cores      = 2
+server_memory     = 2048
+server_disk_size  = 64
+server_mac_prefix = "12:34:56:78:9a:b"
+agent_count       = 2
+agent_names       = ["tete","tutu"]
+agent_cores       = 4
+agent_memory      = 4096
+agent_disk_size   = 128
+agent_mac_prefix  = "12:34:56:78:9a:c"
