--- a/apps/csi-driver-smb/fleet.yaml
+++ b/apps/csi-driver-smb/fleet.yaml
@@ -1,12 +1,9 @@
 namespace: kube-system
 helm:
-  chart: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts/v0.6.0/csi-driver-smb-v0.6.0.tgz
-targetCustomizations:
-- name: local
-  clusterSelector:
-    matchLabels:
-      name: local
-  helm:
-    values:
-      controller:
-        replicas: 1
+  releaseName: csi-driver-smb
+  repo: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts
+  version: 0.6.0
+  #chart: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts/v0.6.0/csi-driver-smb-v0.6.0.tgz
+  values:
+    controller:
+      replicas: 1
