--- a/apps/csi-driver-smb/fleet.yaml
+++ b/apps/csi-driver-smb/fleet.yaml
@@ -3,7 +3,7 @@ helm:
   releaseName: csi-driver-smb
   repo: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts
   version: 0.6.0
-  #chart: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts/v0.6.0/csi-driver-smb-v0.6.0.tgz
+  ##chart: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts/v0.6.0/csi-driver-smb-v0.6.0.tgz
   values:
     controller:
       replicas: 1
