--- a/apps/csi-driver-smb/fleet.yaml
+++ b/apps/csi-driver-smb/fleet.yaml
@@ -1,9 +1,10 @@
 namespace: kube-system
 helm:
   releaseName: csi-driver-smb
-  repo: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts
-  version: 0.6.0
-  ##chart: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts/v0.6.0/csi-driver-smb-v0.6.0.tgz
+  #repo: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts
+  #version: 0.6.0
+  chart: https://github.com/rancher/fleet-examples/releases/download/example/guestbook-0.0.0.tgz
+    ##chart: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts/v0.6.0/csi-driver-smb-v0.6.0.tgz
   values:
     controller:
       replicas: 1
