--- a/apps/gitrepo_hmk.yaml
+++ b/apps/gitrepo_hmk.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ho-my-kub
   namespace: fleet-local
 spec:
-  branch: master
-  repo: https://github.com/anypot/ho-my-kub2.git
+  branch: main
+  repo: https://github.com/anypot/ho-my-kub2
   paths:
   - apps
