--- a/infra_apps/gitrepo-rancher.yaml
+++ b/infra_apps/gitrepo-rancher.yaml
@@ -1,10 +1,10 @@
 apiVersion: fleet.cattle.io/v1alpha1
 kind: GitRepo
 metadata:
-  name: ho-my-kub
+  name: homykub
   namespace: fleet-local
 spec:
   branch: main
   repo: https://github.com/anypot/ho-my-kub2
   paths:
-  - apps
+  - infra_apps
