--- a/infra_apps/csi-driver-smb/fleet.yaml
+++ b/infra_apps/csi-driver-smb/fleet.yaml
@@ -1,4 +1,5 @@
-namespace: kube-system
+#namespace: kube-system
+defaultNamespace: kube-system
 helm:
   releaseName: csi-driver-smb
   chart: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts/v0.6.0/csi-driver-smb-v0.6.0.tgz
