--- a/rancher-bootstrap/gitrepo-rancher.yaml
+++ b/rancher-bootstrap/gitrepo-rancher.yaml
@@ -7,7 +7,7 @@ spec:
   branch: main
   repo: https://github.com/anypot/ho-my-kub2
   paths:
-  - rancher-bootstrap/gitrepos
+  - apps/fleet
   - infra_apps/csi-driver-smb
   - infra_apps/sealed-secrets
   - infra_apps/misc
