Reorg for gitops !

--- a/fleet-config/gitrepos/gitapps-default.yaml
+++ b/fleet-config/gitrepos/gitapps-default.yaml
@@ -1,11 +1,8 @@
 apiVersion: fleet.cattle.io/v1alpha1
 kind: GitRepo
 metadata:
-  name: homykub
+  name: gitapps
   namespace: fleet-default
 spec:
   branch: main
-  repo: https://github.com/anypot/ho-my-kub2
-  paths:
-  - infra_apps
-  - apps
+  repo: https://github.com/anypot/gitapps
