--- a/fleet-config/gitrepos/gitapps-local.yaml
+++ b/fleet-config/gitrepos/gitapps-local.yaml
@@ -1,10 +1,12 @@
 apiVersion: fleet.cattle.io/v1alpha1
 kind: GitRepo
 metadata:
-  name: homykub
+  name: gitapps
   namespace: fleet-local
 spec:
   branch: main
-  repo: https://github.com/anypot/ho-my-kub2
+  repo: https://github.com/anypot/gitapps
   paths:
-  - fleet-config
+  - csi-driver-smb
+  - sealed-secrets
+  - misc
